# Linabot

./: README.md  Robot goals.docx  Zelda.py  Zelda_Copy.py  Zeldafinal.py  linabot.launch  linabot.sh  linabot_old.launch  linabot_test_launch.launch  office_new_3.pgm  office_new_3.yaml  starwars.py  test.launch
catkin_ws/: frames.gv
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/tmp/: libcreate-gitclone.cmake  libcreate-gitupdate.cmake
src/bosch_web_visualization/.svn/: wc.db
src/bosch_web_visualization/map_compressor/: CMakeLists.txt  mainpage.dox  manifest.xml
src/bosch_web_visualization/pointcloud_snapshot_service/: manifest.xml
src/bosch_web_visualization/rosjs_common/: LICENSE
src/bosch_web_visualization/rosjs_resources/: LICENSE  manifest.xml
src/bosch_web_visualization/wviz/: LICENSE  Makefile.wviz  manifest.xml  setup.sh
src/bosch_web_visualization/wviz_scene_manager/: manifest.xml
src/bosch_web_visualization/wviz_tf_manager/: CMakeLists.txt  manifest.xml
src/bower_components/ros-rviz/: .bower.json
src/bower_components/ros-websocket/: .bower.json
src/play_song/: CMakeLists.txt  package.xml
src/play_song/src/: create.py  pokered_intro.py
src/remote_lab/.svn/: wc.db
src/remote_lab/ping/: CMakeLists.txt  manifest.xml
src/remote_lab/pr2_pick_and_place_service/: mainpage.dox  manifest.xml
src/remote_lab/remote_lab_examples/: CMakeLists.txt  LICENSE  cameraview.html  manifest.xml  only_robot.html  setup.sh  wviz.html  wviz_control_demo.html  wviz_interactivemanip.html  wviz_loggingTopics.html  wviz_puppet.html  wviz_sim.html  wviz_vizonly.html
src/remote_lab/remote_lab_examples/launch/: bosch_remote_lab_interactive_markers.launch  empty_100hz.world  empty_grid.launch  empty_throttled.world  head_state_throttle.launch  hri_expriment.launch  jtteleop.launch  laser_assembler.launch  machines.launch  marker_test.launch  mjpeg_server.launch  mjpeg_server_remote.launch  ping.launch  pr2_arm_ik.launch  pr2_tabletop_demo.launch  pr2_tabletop_demo_sim.launch  pr2_tabletop_manipulation.launch  rosbridge.launch  rosbridge_remote.launch  tabletop_object_recognition.launch  tf_throttle.launch  wviz_scene_manager.launch  wviz_server.launch  wviz_tf_manager.launch  wviz_tf_manager_remote.launch
src/remote_lab/remote_lab_examples/scripts/: test_marker.py
src/remote_lab/robot_booking/: manifest.xml
src/remote_lab/rosjs_assisted_teleoperation/: index.html  inst_2.html  inst_3.html  inst_4.html  inst_index.html  obj_1.html  obj_2.html  obj_3.html  obj_4.html  wviz_1.html  wviz_2.html  wviz_4.html  wviz_5.html
src/remote_lab/rosjs_tests/: CMakeLists.txt  LICENSE  (+5 more)
src/ros_socket/: CMakeLists.txt  package.xml
src/rviz_config/: linabot.rviz
src/simple_navigation_goals/: CMakeLists.txt  package.xml
web_map/: hello.py  test.py  waypoints.txt
web_map/templates/: chat.html  listener.html  map_test.html  mjpeg_test.html  ros_test (copy).html  ros_test.html  talker.html  try.html  waypoint.html
(+303 files in other folders)
